完善测试用例

--- a/config.ini
+++ b/config.ini
@@ -12,15 +12,7 @@ on_off = off
 
 [HTTP]
 yc_host=http://192.168.50.19
-dev_jr_host=http://192.168.50.14
-beta_host=http://192.168.2.42
-dev_host=http://192.168.2.47
-dev_check_host=http://192.168.2.48
-hdhoutai_host=http://172.17.2.180
-mirror_check_host=http://192.168.80.125
-hdpc_host=http://huidu.baofengwd.com
-3w=https://www.
-timeout=10
+timeout=100
 
 [HEADERS]
 siteuid = all
@@ -29,11 +21,11 @@ token_v = 213612368807_5811a363c85b19.22399915_75e4ee2761d60f2d7597eaec2579297f1
 token_u = 320012369021_586b1c65c3b3c1.51719831_e76832dc51f7ec8de0ba6ecdd69c8b7658dee93c
 
 [DATABASE]
-host = 192.168.50.12
-username = p2p
-password = baofeng123
+host = 192.168.50.19
+username = guohuai
+password = guohuai123
 port = 3306
-database = storm_settle
+database = property_user
 
 [REDIS]
 yc_host = 192.168.50.19
